:memo: Updated welcome route and added documentation
