# apps/server/src/controllers/home.ts
@@ -1,8 +1,13 @@
 import { Request, Response } from 'express';
 
 export const welcome = (req: Request, res: Response) => {
-  res.status(200).json({
-    success: true,
-    message: 'Welcome to the Shopper Ave API',
-  });
+  try {
+    return res.status(200).json({
+      success: true,
+      message: 'Welcome to the Shopper Ave API',
+    });
+  } catch (err) {
+    console.error(err);
+    return res.status(500).json({ err: 'Something went wrong' });
+  }
 };
