# apps/server/swagger.yml
@@ -105,6 +105,8 @@ components:
                 default: Something went wrong
 
 tags:
+  - name: Welcome
+    description: Welcome Route
   - name: Auth
     description: Authentication Routes
   - name: User
@@ -115,6 +117,27 @@ tags:
     description: Read only admin with some filteration
 
 paths:
+  /:
+    get:
+      tags:
+        - Welcome
+      summary: Check API is working
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    default: true
+                  message:
+                    type: string
+                    default: Welcome to the Shopper Ave API
+        '500':
+           $ref: '#/components/schemas/InternalServerError'
   /signup:
     post:
       tags:
